--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,219 +1,169 @@
-<div class="container">
-  <header>
-      <div class="row">
-          <div class="col-lg-4 col-6">
-              <img src="assets/img/logo.png" alt="logo" width="250px" id="logo">
-          </div>
-          <div class="col-lg-4" id="reto" ocultar>   
-                  <form class="form-inline my-2 my-lg-0">
-                      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                  </form>
-          </div>
-          <div class="col-lg-4">
-              <div class="row">
-                  <div class="col-lg-12">
-                      <a href="#">HOME</a>  |
-                      <a href="#">LOGIN</a>
-                  </div>
-                  <div class="row">
-                      <div class="col-lg-8">
-                          <p>Call:</p>
-                          <p>(800) 2345-6789</p>
-                      </div>
-                      <div class="col-lg-4">
-                          <div class="cart text-center">
-                              <p id="numero">0</p>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div> 
-  </header>   
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="#"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    
-      <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav mr-auto" id="lista">
-          <li class="nav-item active">
-              <a class="nav-link"  href="index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" onclick="return enlace(this.href)" href="empresa.html">Empresa</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" onclick="return enlace(this.href)" href="productos.html">Productos </a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" onclick="return enlace(this.href)" href="especial.html">Especial</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" onclick="return enlace(this.href)" href="contactos.html">Contacto</a>
-          </li>
-        </ul>
-      </div>
-  </nav>
-  <div class="row" id="row">
-      <div class="col-lg-3">
-          <div class="list-group">
-              <a href="#" class="list-group-item list-group-item-action active" id="categoria">
-                  Categorias
-              </a>
-              <a href="#" class="list-group-item list-group-item-action">
-                  Perros
-              </a>
-              <a href="#" class="list-group-item list-group-item-action disabled">
-                  Gatos
-              </a>
-              <a href="#" class="list-group-item list-group-item-action disabled">
-                  Loros
-              </a>
-              <a href="#" class="list-group-item list-group-item-action disabled">
-                  Peces
-              </a>
-          </div>      
-      </div>
-      <div class="col-lg-9">
-          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                  <div class="carousel-item active">
-                  <img class="d-block w-100" src="assets/img/slide1.jpg" alt="First slide">
-                  </div>
-                  <div class="carousel-item">
-                  <img class="d-block w-100" src="assets/img/slide2.jpg" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                  <img class="d-block w-100" src="assets/img/slide3.jpg" alt="Third slide">
-                  </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-              </a>
-          </div>
-      </div>
-  </div>
-  <section id="section">
-      <h3 id="foter">
-          Productos destacados
-      </h3>
-      <div class="lista" >
-          <div class="productos">
-              <img src="assets/img/01.png" alt="#" width="100%">
-              <div class="info">
-                  <p>S/. 25.00</p>
-                  <p>Collar reflectivo color verde</p>
-                  <button type="button" class="btn btn-primary">Agregar</button>
-              </div>
-          </div>
-          <div class="productos">
-              <img src="assets/img/01.png" alt="#" width="100%">
-              <div class="info">
-                      <p>S/. 25.00</p>
-                      <p>Collar reflectivo color verde</p>
-                      <button type="button" class="btn btn-primary">Agregar</button>
-                  </div>
-          </div>
-          <div class="productos">
-              <img src="assets/img/01.png" alt="#" width="100%">
-              <div class="info">
-                      <p>S/. 25.00</p>
-                      <p>Collar reflectivo color verde</p>
-                      <button type="button" class="btn btn-primary">Agregar</button>
-                  </div>
-          </div>
-          <div class="productos">
-              <img src="assets/img/01.png" alt="#" width="100%">
-              <div class="info">
-                      <p>S/. 25.00</p>
-                      <p>Collar reflectivo color verde</p>
-                      <button type="button" class="btn btn-primary">Agregar</button>
-                  </div>
-          </div>
-          <div class="productos">
-              <img src="assets/img/01.png" alt="#" width="100%">
-              <div class="info">
-                      <p>S/. 25.00</p>
-                      <p>Collar reflectivo color verde</p>
-                      <button type="button" class="btn btn-primary">Agregar</button>
-                  </div>
-          </div>
-          <div class="productos">
-              <img src="assets/img/01.png" alt="#" width="100%">
-              <div class="info">
-                      <p>S/. 25.00</p>
-                      <p>Collar reflectivo color verde</p>
-                      <button type="button" class="btn btn-primary">Agregar</button>
-                  </div>
-          </div>
-          <div class="productos">
-              <img src="assets/img/01.png" alt="#" width="100%">
-              <div class="info">
-                      <p>S/. 25.00</p>
-                      <p>Collar reflectivo color verde</p>
-                      <button type="button" class="btn btn-primary">Agregar</button>
-                  </div>
-          </div>
-          <div class="productos">
-              <img src="assets/img/01.png" alt="#" width="100%">
-              <div class="info">
-                      <p>S/. 25.00</p>
-                      <p>Collar reflectivo color verde</p>
-                      <button type="button" class="btn btn-primary">Agregar</button>
-                  </div>
-          </div>
-      </div>
-  </section>
-  <img src="assets/img/bot-bg.png" alt="" id="yapa">
-  <div class="row">
-      <div class="col-lg-3">
-              <div class="list-group">
-                      <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in
-                      </a>
-                      <a href="#" class="list-group-item list-group-item-action disabled">Morbi leo risus
-                      </a>
-                      <a href="#" class="list-group-item list-group-item-action disabled">Morbi leo risus
-                          </a>
-                          <a href="#" class="list-group-item list-group-item-action disabled">Morbi leo risus
-                              </a>
-                              <a href="#" class="list-group-item list-group-item-action disabled">Morbi leo risus
-                                  </a>
+<div class="container cuerpo">
+<header>
+    <div class="row">
+        <div class="col-lg-4 col-6">
+            <a href="index.html"><img src="assets/img/logo.png" alt="Logo" width="250px"></a>
+        </div>
+        <div class="col-lg-4 ocultar">
+            <form class="form-inline my-2 my-lg-0 buscador">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+        <div class="col-lg-4 col-6">
+            <div class="row">
+                <div class="col-lg-12 text-right">
+                    <a href="#">HOME</a> | <a href="#">LOGIN</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 ocultar">
+                    <p class="texto1">Call Us:</p>
+                    <p class="texto2">(800) 2345-6789</p>
+                </div>
+                <div class="col-lg-4">
+                    <div class="cart">
+                        <p class="texto-cart">0</p>
                     </div>
-      </div>
-      <div class="col-lg-3">
-              <div class="list-group"> 
-                      <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in
-                      </a>
-                      <a href="#" class="list-group-item list-group-item-action disabled">Morbi leo risus
-                      </a>
-                      <a href="#" class="list-group-item list-group-item-action disabled">Morbi leo risus
-                          </a>
-                          <a href="#" class="list-group-item list-group-item-action disabled">Morbi leo risus
-                              </a>
-                              <a href="#" class="list-group-item list-group-item-action disabled">Morbi leo risus
-                                  </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav mr-auto nav-menu">
+                <li class="nav-item active">
+                    <a class="nav-link menu activo" href="#" routerLink="/" >HOME</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link menu" href="#"  routerLink="/empresa" >EMPRESA</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link menu" href="#" routerLink="/prodcutos">PRODUCTOS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link menu" href="#" routerLink="/especiales" >ESPECIALES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link menu" href="#" routerLink="/contacto" >CONTACTO</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="row">
+        <div class="col-lg-3">
+            <div class="list-group categorias">
+                <a href="#" class="list-group-item list-group-item-action active">
+                    CATEGORIAS
+                </a>
+                <a href="#" class="list-group-item list-group-item-action">
+                    PERROS
+                </a>
+                <a href="#" class="list-group-item list-group-item-action">
+                    GATOS
+                </a>
+                <a href="#" class="list-group-item list-group-item-action disabled">
+                    LOROS
+                </a>
+                <a href="#" class="list-group-item list-group-item-action disabled">
+                    PECES
+                </a>
+            </div>
+        </div>
+        <div class="col-lg-9">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                    <img class="d-block w-100" src="assets/img/slide1.jpg" alt="First slide" width="100%">
                     </div>
-      </div>
-      <div class="col-lg-6">
-              <img src="assets/img/logo.png" alt="logo" width="95%">
-      </div>
-  </div>
-  <footer>
-      <h3 id="foooter">dsadsadsadasdsa</h3>
-  </footer>
+                    <div class="carousel-item">
+                    <img class="d-block w-100" src="assets/img/slide2.jpg" alt="Second slide" width="100%">
+                    </div>
+                    <div class="carousel-item">
+                    <img class="d-block w-100" src="assets/img/slide3.jpg" alt="Third slide" width="100%">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        
+    </div>
+    <section>
+        <router-outlet></router-outlet> 
+    </section>
+
+    <div class="row">
+        <div class="col-lg-12 text-center">
+            <img src="assets/img/bot-bg.png" alt="Animales" id="animales" width="80%">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-3">
+            <ul class="list-group">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <a href="#">HOME</a> 
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <a href="#">NEW PRODUCTS</a>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <a href="#">SPECIALS</a>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <a href="#">REVIEWS</a>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <a href="#">CONTACTS</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3">
+            <ul class="list-group">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <a href="#">MY ACCOUNT</a>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <a href="#">SITE MAP</a>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <a href="#">FACEBOOK</a>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <a href="#">TWITTER</a>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <a href="#">GOOGLE</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6">
+            <div class="logo2">
+                <img src="assets/img/logo.png" alt="Logo" width="90%">
+            </div>
+            <div class="telefono2">
+                <b>Call Us:</b>(800) 2345-6789
+            </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <div class="extra">
+                Copyright © 2019 Pets Online Store. Powered by @AngelDX &nbsp;| &nbsp;Derechos reservados
+        </div>
+    </div>
 </div>
 
-<router-outlet></router-outlet>
+
+
+
